extra padding on texts in form - solved

--- a/src/Components/RegistrationForm/Registration.css
+++ b/src/Components/RegistrationForm/Registration.css
@@ -5,3 +5,6 @@ td, th{
 th{
     background-color: #EEE;
 }
+img {
+    display: initial !important;
+}
